crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__multi_type_integer_constraint_fallbacks.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"minimum\":0,\"type\":[\"integer\",\"string\",\"boolean\",\"null\",\"array\",\"object\"]}"
expression: is_valid_body(schema)
---
match instance {
            __Value::Number(n) if __types::is_integer(n) => __num::ge(n, 0u64),
            __Value::String(_)
            | __Value::Array(_)
            | __Value::Object(_)
            | __Value::Bool(_)
            | __Value::Null => true,
            _ => false,
        }
