crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__multi_type_non_number.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"type\":[\"boolean\",\"null\",\"array\",\"object\"]}"
expression: is_valid_body(schema)
---
matches!(
            instance, serde_json::Value::Bool(_) | serde_json::Value::Null |
            serde_json::Value::Array(_) | serde_json::Value::Object(_)
        )
