crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__multi_type_string_integer.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"type\":[\"string\",\"integer\"]}"
expression: is_valid_body(schema)
---
match instance {
            __Value::Number(n) => __types::is_integer(n),
            __Value::String(_) => true,
            _ => false,
        }
