crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__multiple_of.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"multipleOf\":3,\"type\":\"number\"}"
expression: is_valid_body(schema)
---
match instance {
            __Value::Number(n) => __num::is_multiple_of_integer(n, 3f64),
            _ => false,
        }
