crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__multiple_of_bigfrac.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"multipleOf\":0.1,\"type\":\"number\"}"
expression: is_valid_body(schema)
---
match instance {
            __Value::Number(n) => __num::check_compiled_multiple_of(n, "0.1"),
            _ => false,
        }
