crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__multiple_of_bigint.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"multipleOf\":18446744073709551616,\"type\":\"number\"}"
expression: is_valid_body(schema)
---
match instance {
            __Value::Number(n) => {
                __num::check_compiled_multiple_of(n, "18446744073709551616")
            }
            _ => false,
        }
