crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__not.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"not\":{\"type\":\"string\"}}"
expression: is_valid_body(schema)
---
!(instance.is_string())
